--- a/public/cart.html
+++ b/public/cart.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="polyfill_details.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/CartComponent.js" defer></script>
+    <script src="js/ProductsComponent.js" defer></script>
+    <script src="js/ErrorComp.js" defer></script>
+    <script src="js/FilterComp.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 
 <body>
+<div id="app">
     <header class="header">
         <div class="container header__flex">
             <div class="header__left">
@@ -57,38 +63,6 @@
                 </form>
             </div>
             <div class="header__right">
-                <div class="cart__container">
-                    <a class="cart" href="#"><img class="cart__img" src="img/cart.svg" alt="cart"></a>
-                    <div class="cart__ellipse">2</div>
-                    <div class="cart__container__drop">
-                        <div class="cart__drop">
-                            <div class="cart__drop__flex">
-                                <a href="single_page.html" class="cart__item__img"><img src="img/cart-item-1.jpg" alt="prod"></a>
-                                <div class="cart__drop__text">
-                                    <a href="single_page.html" class="cart__item__name">Rebox Zane</a><br>
-                                    <img class="cart__drop__star" src="img/cart-stars-temp.png" alt="stars">
-                                    <p class="cart__drop__price">1 <span>x</span> $250</p>
-                                </div>
-                                <a href="#" class="cart__drop__del"><i class="fas fa-times-circle"></i></a>
-                            </div>
-                            <div class="cart__drop__flex">
-                                <a href="single_page.html" class="cart__item__img"><img src="img/cart-item-2.jpg" alt="prod"></a>
-                                <div class="cart__drop__text">
-                                    <a href="single_page.html" class="cart__item__name">Rebox Zane</a><br>
-                                    <img class="cart__drop__star" src="img/cart-stars-temp.png" alt="stars">
-                                    <p class="cart__drop__price">1 <span>x</span> $250</p>
-                                </div>
-                                <a href="#" class="cart__drop__del"><i class="fas fa-times-circle"></i></a>
-                            </div>
-                            <div class="cart__drop__btns">
-                                <p class="cart__drop__total"><span>TOTAL</span> $500.00</p>
-                                <a class="cart__drop__btn" href="checkout.html">Checkout</a>
-                                <br>
-                                <a class="cart__drop__btn" href="cart.html">Go to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <a class="menu_right" href="#">My Account<i class="fas fa-caret-down"></i></a>
             </div>
         </div>
@@ -431,108 +405,7 @@
             </nav>
         </div>
     </div>
-    <div class="cart__tbl">
-        <div class="cart__header">
-            <h4 class="cart__col1 cart__header__text">Product Details</h4>
-            <h4 class="cart__col2 cart__header__text">unite Price</h4>
-            <h4 class="cart__col3 cart__header__text">Quantity</h4>
-            <h4 class="cart__col4 cart__header__text">shipping</h4>
-            <h4 class="cart__col5 cart__header__text">Subtotal</h4>
-            <h4 class="cart__col6 cart__header__text">ACTION</h4>
-        </div>
-        <div class="cart__product">
-            <div class="cart__col1">
-                <a href="single_page.html" class="cart__img"><img src="img/cart-prod-1.jpg" alt="goods"></a>
-                <div class="cart__descript">
-                    <a href="single_page.html" class="cart__descript__title">Mango People T-shirt</a><br>
-                    <img src="img/cart-stars-temp.png" alt="stars">
-                    <p class="cart__descript__text">Color: <span>Red</span></p>
-                    <p class="cart__descript__text">Size: <span>Xll</span></p>
-                </div>
-            </div>
-            <div class="cart__col2">$150</div>
-            <div class="cart__col3">
-                <input class="cart__quant" min="1" type="number" value="2">
-            </div>
-            <div class="cart__col4">FREE</div>
-            <div class="cart__col5">$300</div>
-            <div class="cart__col6">
-                <a href="#" class="cart__dellink"><i class="fas fa-times-circle"></i></a>
-            </div>
-        </div>
-        <div class="cart__product">
-            <div class="cart__col1">
-                <a href="single_page.html" class="cart__img"><img src="img/cart-prod-2.jpg" alt="goods"></a>
-                <div class="cart__descript">
-                    <a href="single_page.html" class="cart__descript__title">Mango People T-shirt</a><br>
-                    <img src="img/cart-stars-temp.png" alt="stars">
-                    <p class="cart__descript__text">Color: <span>Red</span></p>
-                    <p class="cart__descript__text">Size: <span>Xll</span></p>
-                </div>
-            </div>
-            <div class="cart__col2">$150</div>
-            <div class="cart__col3">
-                <input class="cart__quant" min="1" type="number" value="2">
-            </div>
-            <div class="cart__col4">FREE</div>
-            <div class="cart__col5">$300</div>
-            <div class="cart__col6">
-                <a href="#" class="cart__dellink"><i class="fas fa-times-circle"></i></a>
-            </div>
-        </div>
-        <div class="cart__product">
-            <div class="cart__col1">
-                <a href="single_page.html" class="cart__img"><img src="img/cart-prod-3.jpg" alt="goods"></a>
-                <div class="cart__descript">
-                    <a href="single_page.html" class="cart__descript__title">Mango People T-shirt</a><br>
-                    <img src="img/cart-stars-temp.png" alt="stars">
-                    <p class="cart__descript__text">Color: <span>Red</span></p>
-                    <p class="cart__descript__text">Size: <span>Xll</span></p>
-                </div>
-            </div>
-            <div class="cart__col2">$150</div>
-            <div class="cart__col3">
-                <input class="cart__quant" min="1" type="number" value="2">
-            </div>
-            <div class="cart__col4">FREE</div>
-            <div class="cart__col5">$300</div>
-            <div class="cart__col6">
-                <a href="#" class="cart__dellink"><i class="fas fa-times-circle"></i></a>
-            </div>
-        </div>
-        <div class="cart__buttons">
-            <button class="cart__button">cLEAR SHOPPING CART</button>
-            <a class="cart__button" href="product.html">cONTINUE sHOPPING</a>
-        </div>
-        <div class="cart__form">
-            <div class="cart__form__flex">
-                <h3 class="cart__form__h3">Shipping Adress</h3>
-                <select class="cart__input" name="country" id="country">
-                    <option selected>Bangladesh</option>
-                    <option>Bangladesh</option>
-                    <option>Bangladesh</option>
-                    <option>Bangladesh</option>
-                    <option>Bangladesh</option>
-                </select><br>
-                <input class="cart__input" type="text" placeholder="State"><br>
-                <input class="cart__input" type="number" placeholder="Postcode / Zip"><br>
-                <button class="cart__button cart__button__small">get a quote</button>
-            </div>
-            <div class="cart__form__flex">
-                <h3 class="cart__form__h3">coupon discount</h3>
-                <p class="cart__form__text">Enter your coupon code if you have one</p>
-                <input class="cart__input" type="text" placeholder="State"><br>
-                <button class="cart__button cart__button__small">Apply coupon</button>
-            </div>
-            <div class="cart__form__flex cart__checkout">
-                <div class="cart__checkout__bdr">
-                    <h4 class="cart__form__h4">Sub total <span>$900</span></h4>
-                    <h3 class="cart__form__h3">GRAND TOTAL <span>$900</span></h3>
-                </div>
-                <a class="cart__checkout__btn" href="checkout.html">proceed to checkout</a>
-            </div>
-        </div>
-    </div>
+    <cart page="true" class="cart__tbl"></cart>
     <div class="subscribe">
         <div class="subscribe_container">
             <div class="subscribe__comment">
@@ -608,6 +481,7 @@
             </div>
         </div>
     </footer>
+</div>
 </body>
 
 </html>
