--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="polyfill_details.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/CartComponent.js" defer></script>
+    <script src="js/ProductsComponent.js" defer></script>
+    <script src="js/ErrorComp.js" defer></script>
+    <script src="js/FilterComp.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 
 <body>
+<div id="app">
     <header class="header">
         <div class="container header__flex">
             <div class="header__left">
@@ -57,38 +63,7 @@
                 </form>
             </div>
             <div class="header__right">
-                <div class="cart__container">
-                    <a class="cart" href="cart.html"><img class="cart__img" src="img/cart.svg" alt="cart"></a>
-                    <div class="cart__ellipse">2</div>
-                    <div class="cart__container__drop">
-                        <div class="cart__drop">
-                            <div class="cart__drop__flex">
-                                <a href="single_page.html" class="cart__item__img"><img src="img/cart-item-1.jpg" alt="prod"></a>
-                                <div class="cart__drop__text">
-                                    <a href="single_page.html" class="cart__item__name">Rebox Zane</a><br>
-                                    <img class="cart__drop__star" src="img/cart-stars-temp.png" alt="stars">
-                                    <p class="cart__drop__price">1 <span>x</span> $250</p>
-                                </div>
-                                <a href="#" class="cart__drop__del"><i class="fas fa-times-circle"></i></a>
-                            </div>
-                            <div class="cart__drop__flex">
-                                <a href="single_page.html" class="cart__item__img"><img src="img/cart-item-2.jpg" alt="prod"></a>
-                                <div class="cart__drop__text">
-                                    <a href="single_page.html" class="cart__item__name">Rebox Zane</a><br>
-                                    <img class="cart__drop__star" src="img/cart-stars-temp.png" alt="stars">
-                                    <p class="cart__drop__price">1 <span>x</span> $250</p>
-                                </div>
-                                <a href="#" class="cart__drop__del"><i class="fas fa-times-circle"></i></a>
-                            </div>
-                            <div class="cart__drop__btns">
-                                <p class="cart__drop__total"><span>TOTAL</span> $500.00</p>
-                                <a class="cart__drop__btn" href="checkout.html">Checkout</a>
-                                <br>
-                                <a class="cart__drop__btn" href="cart.html">Go to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <cart ref="cart" class="cart__container"></cart>
                 <a class="menu_right" href="#">My Account<i class="fas fa-caret-down"></i></a>
             </div>
         </div>
@@ -449,93 +424,13 @@
             </a>
         </div>
     </aside>
-    <section class="featured">
+    <div class="featured">
         <h2 class="featured__head">Fetured Items</h2>
         <p class="featured__text">Shop for items based on what we featured in this week</p>
-        <div class="featured__flex">
-            <div class="featured__product">
-                <img src="img/feat_1.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-            <div class="featured__product">
-                <img src="img/feat_2.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-            <div class="featured__product">
-                <img src="img/feat_3.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-            <div class="featured__product">
-                <img src="img/feat_4.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-            <div class="featured__product">
-                <img src="img/feat_5.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-            <div class="featured__product">
-                <img src="img/feat_6.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-            <div class="featured__product">
-                <img src="img/feat_7.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-            <div class="featured__product">
-                <img src="img/feat_8.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="single_page.html">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-            </div>
-        </div>
+        <products ref="products" :items-quantity="8" :catalog-page="false"></products>
+
         <a class="featured__button" href="#">Browse All Product<i class="fas fa-long-arrow-alt-right"></i></a>
-    </section>
+    </div>
     <aside class="banner__big">
         <div class="banner__big__left">
             <img src="img/banner_big.jpg" alt="banner">
@@ -647,6 +542,7 @@
             </div>
         </div>
     </footer>
+</div>
 </body>
 
 </html>
