--- a/public/single_page.html
+++ b/public/single_page.html
@@ -8,10 +8,16 @@
     <link rel="stylesheet" type="text/css" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <script src="polyfill_details.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/CartComponent.js" defer></script>
+    <script src="js/ProductsComponent.js" defer></script>
+    <script src="js/ErrorComp.js" defer></script>
+    <script src="js/FilterComp.js" defer></script>
+    <script src="js/main.js" defer></script>
 </head>
 
 <body>
+<div id="app">
     <header class="header">
         <div class="container header__flex">
             <div class="header__left">
@@ -57,38 +63,7 @@
                 </form>
             </div>
             <div class="header__right">
-                <div class="cart__container">
-                    <a class="cart" href="cart.html"><img class="cart__img" src="img/cart.svg" alt="cart"></a>
-                    <div class="cart__ellipse">2</div>
-                    <div class="cart__container__drop">
-                        <div class="cart__drop">
-                            <div class="cart__drop__flex">
-                                <a href="single_page.html" class="cart__item__img"><img src="img/cart-item-1.jpg" alt="prod"></a>
-                                <div class="cart__drop__text">
-                                    <a href="single_page.html" class="cart__item__name">Rebox Zane</a><br>
-                                    <img class="cart__drop__star" src="img/cart-stars-temp.png" alt="stars">
-                                    <p class="cart__drop__price">1 <span>x</span> $250</p>
-                                </div>
-                                <a href="#" class="cart__drop__del"><i class="fas fa-times-circle"></i></a>
-                            </div>
-                            <div class="cart__drop__flex">
-                                <a href="single_page.html" class="cart__item__img"><img src="img/cart-item-2.jpg" alt="prod"></a>
-                                <div class="cart__drop__text">
-                                    <a href="single_page.html" class="cart__item__name">Rebox Zane</a><br>
-                                    <img class="cart__drop__star" src="img/cart-stars-temp.png" alt="stars">
-                                    <p class="cart__drop__price">1 <span>x</span> $250</p>
-                                </div>
-                                <a href="#" class="cart__drop__del"><i class="fas fa-times-circle"></i></a>
-                            </div>
-                            <div class="cart__drop__btns">
-                                <p class="cart__drop__total"><span>TOTAL</span> $500.00</p>
-                                <a class="cart__drop__btn" href="checkout.html">Checkout</a>
-                                <br>
-                                <a class="cart__drop__btn" href="cart.html">Go to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <cart ref="cart" class="cart__container"></cart>
                 <a class="menu_right" href="#">My Account<i class="fas fa-caret-down"></i></a>
             </div>
         </div>
@@ -507,56 +482,7 @@
     </div>
     <div class="products__container">
         <h3 class="products__container__h3">you may like also</h3>
-        <div class="products">
-            <div class="products_item">
-                <img src="img/prod-10.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="#">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-                <a href="#" class="product__round"><img src="img/round.svg" alt="Round"></a>
-                <a href="#" class="product__hearth"><img src="img/hearth.svg" alt="Round"></a>
-            </div>
-            <div class="products_item">
-                <img src="img/prod-11.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="#">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-                <a href="#" class="product__round"><img src="img/round.svg" alt="Round"></a>
-                <a href="#" class="product__hearth"><img src="img/hearth.svg" alt="Round"></a>
-            </div>
-            <div class="products_item">
-                <img src="img/prod-12.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="#">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-                <a href="#" class="product__round"><img src="img/round.svg" alt="Round"></a>
-                <a href="#" class="product__hearth"><img src="img/hearth.svg" alt="Round"></a>
-            </div>
-            <div class="products_item">
-                <img src="img/prod-13.jpg" alt="product">
-                <p class="featured__title">Mango People T-shirt</p>
-                <p class="featured__price">$52.00</p>
-                <a class="featured__hover" href="#">
-                    <p class="product__stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-                </a>
-                <a href="#" class="featured__cart"><img class="featured__cart__img" src="img/cart_white.svg" alt="Cart">Add
-                    to Cart</a>
-                <a href="#" class="product__round"><img src="img/round.svg" alt="Round"></a>
-                <a href="#" class="product__hearth"><img src="img/hearth.svg" alt="Round"></a>
-            </div>
-        </div>
+        <products ref="products" :items-quantity="4" :catalog-page="true"></products>
     </div>
     <div class="subscribe">
         <div class="subscribe_container">
@@ -633,6 +559,7 @@
             </div>
         </div>
     </footer>
+</div>
 </body>
 
 </html>
